Update Итоговая работа по курсу "Математика для Data Science".ipynb

--- a/Итоговая работа по курсу "Математика для Data Science".ipynb
+++ b/Итоговая работа по курсу "Математика для Data Science".ipynb
@@ -663,7 +663,7 @@
     {
       "cell_type": "code",
       "source": [
-        "distance_matrix = pairwise_distances(raitings) #Применила метод pairwise_distances для определения косинусного расстояния между пользователями"
+        "distance_matrix = pairwise_distances(raitings, metric='cosine') #Применила метод pairwise_distances для определения косинусного расстояния между пользователями"
       ],
       "metadata": {
         "id": "hYTk0p0gdRFJ"
